added create Distributor Servlet

--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -220,5 +220,17 @@
     </servlet-mapping>
 
 
+    <!--DISTRIBUTOR SERVLETS-->
+
+    <servlet>
+        <servlet-name>CreateDistributorServlet</servlet-name>
+        <servlet-class>TEmPoS.Servlet.Distributors.CreateDistributorServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CreateDistributorServlet</servlet-name>
+        <url-pattern>/createDistributorServlet</url-pattern>
+    </servlet-mapping>
+
+
 
 </web-app>
