--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -231,6 +231,16 @@
         <url-pattern>/createDistributorServlet</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>DeleteDistributorServlet</servlet-name>
+        <servlet-class>TEmPoS.Servlet.Distributors.DeleteDistributorServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DeleteDistributorServlet</servlet-name>
+        <url-pattern>/deleteDistributorServlet</url-pattern>
+    </servlet-mapping>
+
+
 
 
 </web-app>
