Implemented Get and Edit Distributor servlets and some H2 functionality to support these.

--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -240,6 +240,16 @@
         <url-pattern>/deleteDistributorServlet</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>EditDistributorServlet</servlet-name>
+        <servlet-class>TEmPoS.Servlet.Distributors.EditDistributorServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>EditDistributorServlet</servlet-name>
+        <url-pattern>/editDistributorServlet</url-pattern>
+    </servlet-mapping>
+
+
 
 
 
