implemented getStock (byId) Servlet

--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -182,6 +182,26 @@
     </servlet-mapping>
 
 
+    <!--STOCK SERVLETS-->
+    <servlet>
+        <servlet-name>CreateStockServlet</servlet-name>
+        <servlet-class>TEmPoS.Servlet.Stock.CreateStockServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CreateStockServlet</servlet-name>
+        <url-pattern>/createStockServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>GetStockServlet</servlet-name>
+        <servlet-class>TEmPoS.Servlet.Stock.GetStockServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>GetStockServlet</servlet-name>
+        <url-pattern>/getStockServlet</url-pattern>
+    </servlet-mapping>
+
+
     <!--BRANDS SERVLETS-->
     <servlet>
         <servlet-name>CreateBrandServlet</servlet-name>
