implemented increment stock servlet

--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -201,6 +201,14 @@
         <url-pattern>/getStockServlet</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>IncrementStockServlet</servlet-name>
+        <servlet-class>TEmPoS.Servlet.Stock.IncrementStockServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>IncrementStockServlet</servlet-name>
+        <url-pattern>/incrementStockServlet</url-pattern>
+    </servlet-mapping>
 
     <!--BRANDS SERVLETS-->
     <servlet>
